--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136348517-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-136348517-1');
+	</script>
+
 	<title>Isto Ja Foi Mais Fixe</title>
 
 	<meta name="description" content="Um podcast de merda, com gente de merda, sobre frases de merda.">
@@ -12,7 +21,6 @@
 	<meta property="og:image:height" content="200px" />
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="pt_PT" />
-
 
 	<meta name="twitter:card" content="Um podcast de merda" />
 	<meta name="twitter:site" content="@ijfmf" />
